--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,11 @@ li a:hover{
 	<br>
     <nav >
         <ul>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\index.html">Home</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\about.html">About </a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\work.html">Work</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\gallery.html">Gallery</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About </a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav><br>
 	<h2 style="text-align: center; color: black; font-size: 35;"> CONTACT US </h2>
