--- a/gallery.html
+++ b/gallery.html
@@ -81,11 +81,11 @@
 	<br> <br>
     <nav >
         <ul>
-           <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\index.html">Home</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\about.html">About </a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\work.html">Work</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\gallery.html">Gallery</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\contact.html">Contact Us</a></li>
+           <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About </a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 	<br><br>
@@ -138,7 +138,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="https://ae01.alicdn.com/kf/He07ba7376a904a599445075a82b2a676h.jpg_640x640Q90.jpg_.webp" alt="Jane" style="width:100%">
+      <img src="https://m.media-amazon.com/images/S/mms-media-storage-prod/final/BrandPosts/brandPosts/d190c41c-7f04-4bcc-b3da-de5b83159a0c/fc8249d1-83b3-4db4-b275-e6d25aa54eed/media._SL480_.jpeg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Out Sexy Black Dress</h2>
         <p class="title">In stock</p>
@@ -151,7 +151,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="https://ae01.alicdn.com/kf/S20e9cea3f82f47d6a3705346c4cea892w.jpg_640x640Q90.jpg_.webp" alt="Mike" style="width:100%">
+      <img src="https://media.karousell.com/media/photos/products/2022/6/23/sexy_black_dress_1655977670_f392056a_progressive" alt="Mike" style="width:100%">
       <div class="container">
         <h2> Blue Long Sleeve Knee</h2>
         <p class="title">In stock</p>
