--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://as1.ftcdn.net/v2/jpg/03/96/50/56/1000_F_396505657_iQ1SieRsTpFRkqYkr6f7XN4EOLN9C3al.jpg');
+            background-image: url('https://m.media-amazon.com/images/I/71B-t-hBBDS.jpg');
 			 background-size: cover; 
             background-repeat: no-repeat;
         }
@@ -28,11 +28,11 @@
 	<br> <br>
     <nav >
         <ul>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\index.html">Home</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\about.html">About </a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\work.html">Work</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\gallery.html">Gallery</a></li>
-            <li><a href="C:\Users\Cynthia\Desktop\KEPLER COLLEGE\YEAR 2\TERM 2\Web Design\Assessment1\contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About </a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav><br><br><br>
 	<h1 style="text-align: center; font-size: 40;">Company's Accomplishments</h1><br><br>
